crates/swc_ecma_parser/tests/pat/errors/rest-initializer/input.js
[...a=1]=[];
[a,...b=1]=[];

([...a=1])=>{};
([a,...b=1])=>{};

({...a=1}={});
({a,...b=1}={});

({...a=1})=>{};
({a,...b=1})=>{};

(...a=1)=>{};
(a,...b=1)=>{};
